; ModuleID = '/home/carl/AnghaBench/curl/docs/examples/extr_rtsp.c_rtsp_setup.c'
source_filename = "/home/carl/AnghaBench/curl/docs/examples/extr_rtsp.c_rtsp_setup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CURLE_OK = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i8] c"\0ARTSP: SETUP %s\0A\00", align 1
@.str.1 = private unnamed_addr constant [20 x i8] c"      TRANSPORT %s\0A\00", align 1
@CURLOPT_RTSP_STREAM_URI = common dso_local global i32 0, align 4
@CURLOPT_RTSP_TRANSPORT = common dso_local global i32 0, align 4
@CURLOPT_RTSP_REQUEST = common dso_local global i32 0, align 4
@CURL_RTSPREQ_SETUP = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*, i8*)* @rtsp_setup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rtsp_setup(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i32, i32* @CURLE_OK, align 4
  store i32 %8, i32* %7, align 4
  %9 = load i8*, i8** %5, align 8
  %10 = call i32 @printf(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i8* %9)
  %11 = load i8*, i8** %6, align 8
  %12 = call i32 @printf(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.1, i64 0, i64 0), i8* %11)
  %13 = load i32*, i32** %4, align 8
  %14 = load i32, i32* @CURLOPT_RTSP_STREAM_URI, align 4
  %15 = load i8*, i8** %5, align 8
  %16 = call i32 (i32*, i32, ...) @my_curl_easy_setopt(i32* %13, i32 %14, i8* %15)
  %17 = load i32*, i32** %4, align 8
  %18 = load i32, i32* @CURLOPT_RTSP_TRANSPORT, align 4
  %19 = load i8*, i8** %6, align 8
  %20 = call i32 (i32*, i32, ...) @my_curl_easy_setopt(i32* %17, i32 %18, i8* %19)
  %21 = load i32*, i32** %4, align 8
  %22 = load i32, i32* @CURLOPT_RTSP_REQUEST, align 4
  %23 = load i64, i64* @CURL_RTSPREQ_SETUP, align 8
  %24 = call i32 (i32*, i32, ...) @my_curl_easy_setopt(i32* %21, i32 %22, i64 %23)
  %25 = load i32*, i32** %4, align 8
  %26 = call i32 @my_curl_easy_perform(i32* %25)
  ret void
}

declare dso_local i32 @printf(i8*, i8*) #1

declare dso_local i32 @my_curl_easy_setopt(i32*, i32, ...) #1

declare dso_local i32 @my_curl_easy_perform(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
